--- a/css/tooplate-barista.css
+++ b/css/tooplate-barista.css
@@ -685,7 +685,7 @@ strong {
   OUR MENU              
 -----------------------------------------*/
 .menu-section {
-  background-image: url('../images/happy-waitress-giving-coffee-customers-while-serving-them-coffee-shop.jpg');
+  background-image: url('../images/hi2.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -761,10 +761,11 @@ strong {
 }
 
 .reviews-block-image-wrap {
-  background-image: url('../images/mid-section-waitress-wiping-espresso-machine-with-napkin-cafa-c.jpg');
+  background-image: url('../images/hi3.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  outline-style:inherit;
   padding: 30px;
 }
 
@@ -782,7 +783,7 @@ strong {
 
 .reviews-block-info p {
   font-size: var(--btn-font-size);
-  font-style: italic;
+  font-style: verdana;
   color: rgba(255, 255, 255, 0.75);
 }
 
@@ -795,7 +796,7 @@ strong {
   BOOKING SECTION              
 -----------------------------------------*/
 .booking-section {
-  background-image: url('../images/young-female-barista-wear-face-mask-serving-take-away-hot-coffee-paper-cup-consumer-cafe.jpg');
+  background-image: url('../images/pexels-elahe-rahimi-13291277.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -811,7 +812,7 @@ strong {
 }
 
 .booking-form {
-  padding: 55px 65px;
+  padding: 55px 55px;
 }
 
 .booking-form-image-wrap {
