--- a/css/tooplate-barista.css
+++ b/css/tooplate-barista.css
@@ -14,8 +14,8 @@ https://www.tooplate.com/view/2137-barista-cafe
   --primary-color:                #BC6C25;
   --secondary-color:              #DDA15E;
   --section-bg-color:             #b78752;
-  --custom-btn-bg-color:          #BC6C25;
-  --custom-btn-bg-hover-color:    #DDA15E;
+  --custom-btn-bg-color:          #030303;
+  --custom-btn-bg-hover-color:    #0c0c0c;
   --dark-color:                   #000000;
   --p-color:                      #717275;
   --border-color:                 #7fffd4;
@@ -198,7 +198,7 @@ strong {
   height: 25px;
   right: -12px;
   background-color: var(--white-color);
-  border: 5px solid #7c5c52;
+  border: 5px solid #b88879;
   top: 15px;
   border-radius: 50%;
   z-index: 1;
@@ -746,7 +746,7 @@ strong {
   REVIEWS              
 -----------------------------------------*/
 .reviews-section {
-  background-color: #7c5c52;
+  background-color: #e3bcb0;
 }
 
 .reviews-block {
@@ -761,7 +761,7 @@ strong {
 }
 
 .reviews-block-image-wrap {
-  background-image: url('../images/hi3.jpg');
+  background-image: url('../images/pexels-vlada-karpovich-6634649.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -845,7 +845,7 @@ strong {
   CONTACT               
 -----------------------------------------*/
 .contact-section {
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.45), rgba(188, 108, 37, 1)), url('../images/young-female-barista-wear-face-mask-serving-take-away-hot-coffee-paper-cup-consumer-cafe.jpg');
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.45), rgb(235, 176, 125)), url('../images/hi3.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
